# code_organism

./: .coverage  .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Code_Organism_Brief.md  Dockerfile  README.md  SECURITY.md  __init__.py  __main__.py  cli.py  mcp_config_example.json  pyproject.toml
.github/workflows/: release.yml  test.yml
analysis/: communities.py  impact.py  processes.py
artifacts/: execute_cycle_deps.json  execute_cycle_graph.dot  execute_cycle_graph.mmd  execute_cycle_steps.json
audits/: AUDIT-2026-03-23-1.md  AUDIT-2026-03-23.md  AUDIT-2026-03-24.md  AUDIT-2026-04-23-1.md  AUDIT-2026-04-23.md  AUDIT-2026-04-29-1.md  AUDIT-2026-04-29-2.md  AUDIT-2026-04-29-3.md  AUDIT-2026-04-29-4.md  AUDIT-2026-04-29-5.md  AUDIT-2026-04-29-6.md  AUDIT-2026-04-29-7.md  AUDIT-2026-04-29-8.md  AUDIT-2026-04-29.md
docs/superpowers/plans/: 2026-03-16-code-organism-engine-upgrade.md
examples/: __init__.py  demo_target.py  run_demo.py
graph/: schema.py  store.py
health/: __init__.py  complexity.py  malware.py  patterns.py
mcp_server/: __main__.py  server.py
model/: __init__.py  clustering.py  layout.py  nodes.py  organism.py
outputs/: README.md  example.analyze.summary.json  example.communities.json  example.health.summary.json
parser/: __init__.py  ast_walker.py  dispatcher.py  tree_sitter_parser.py
renderer/: __init__.py  graph_3d.py  graph_3d_instanced.py  playback_renderer.py  solar_system.py
scripts/: benchmark.py
tests/: conftest.py  test_clustering.py  test_communities.py  test_dispatcher.py  test_graph_schema.py  test_graph_store.py  test_impact.py  test_json_cli.py  test_mcp_server.py  test_processes.py  test_query_cli.py  test_tracer.py  test_tree_sitter.py
timeline/: __init__.py  controls.py  player.py  recorder.py  visualizer.py
tools/: __init__.py  extract_execute_cycle.py
tracer/: __init__.py  instrumenter.py
