[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "code-organism"
version = "2.0.0"
description = "Code analysis engine with 3D visualization, health diagnostics, and persistent graph storage"
requires-python = ">=3.10"
dependencies = [
    "kuzu==0.11.3",
    "tree-sitter>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-rust>=0.24.0",
    "tree-sitter-c>=0.24.0",
    "tree-sitter-cpp>=0.23.0",
    "igraph>=1.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6.0"]

[project.scripts]
code-organism = "Code_Organism.cli:main"

[tool.setuptools.packages.find]
where = [".."]
include = ["Code_Organism*"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["examples/demo_target.py"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line-length handled by formatter; long lines mostly in HTML/JS literals
    "B008",  # function calls in argument defaults — used intentionally for dataclass factories
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]  # tests sometimes import after sys.path edits
